--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 /.mvn/
 /spring-cloud-session-2-microservices-dynamic-ports.mp4
 /.vagrant/
+/Spring Cloud Session 4 Inter Microservice Communication ASynchronous using RabbitMQ.mp4
